# Potato-plants-nemdetect--PP-2025

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: band_reduction_plots.ipynb  cross_validate.ipynb  metrics.ipynb
scripts/: cli-run-all.sh  evaluate-bands-reduction.sh  install-dev.sh
source/analysis/: metrics.py  plots.py  present.py
source/core/: __init__.py  artifacts.py  settings.py  validation.py
source/dataloader/: helpers.py  loader.py
source/trainer/: methods.py  models.py  parameters.py  preprocess.py  trainer.py
source/utils/: params.py  shap.py  specific.py  tools.py  utils.py
