[project]
name = "nemdetect-tubers"
version = "0.1.0"
description = "Article based on nemdetect project"
authors = [{ name = "janezlapajne", email = "janez.lapajne@kis.si" }]
dependencies = [
    "loguru>=0.7.2",
    "typer>=0.12.5",
    "pydantic-settings>=2.5.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "xgboost>=2.1.1",
    "siapy>=0.5.4",
    "tabulate>=0.9.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = ["ruff>=0.6.7", "pre-commit>=3.8.0", "mypy>=1.11.2", "codespell>=2.3.0"]

[tool.ruff]
extend-exclude = []
exclude = []
lint.ignore = ["F811"]
src = ["source/", "main.py"]
